--- a/xar-WP6/assets/xaringan-themer.css
+++ b/xar-WP6/assets/xaringan-themer.css
@@ -44,7 +44,7 @@
 
   /* Colors */
   --text-color: #000000;
-  --header-color: #1381B0;
+  --header-color: #969696;
   --background-color: #FFFFFF;
   --link-color: #1381B0;
   --text-bold-color: #1381B0;
@@ -55,7 +55,7 @@
   --inverse-link-color: #1381B0;
   --title-slide-background-color: #FFFFFF;
   --title-slide-text-color: #000000;
-  --header-background-color: #1381B0;
+  --header-background-color: #969696;
   --header-background-text-color: #FFFFFF;
   --primary: #1381B0;
   --secondary: #FF961C;
