--- a/xar-WP6/assets/xaringan-themer.css
+++ b/xar-WP6/assets/xaringan-themer.css
@@ -19,7 +19,7 @@
  *
  * ------------------------------------------------------- */
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap);
-@import url(https://fonts.googleapis.com/css?family=Cabin:600,600i&display=swap);
+@import url(https://raw.githubusercontent.com/LF2L/INEDIT-WP6/main/xar-WP6/assets/WP6.css);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
 
 
@@ -44,7 +44,7 @@
 
   /* Colors */
   --text-color: #000000;
-  --header-color: #969696;
+  --header-color: #1381B0;
   --background-color: #FFFFFF;
   --link-color: #1381B0;
   --text-bold-color: #1381B0;
@@ -55,7 +55,7 @@
   --inverse-link-color: #1381B0;
   --title-slide-background-color: #FFFFFF;
   --title-slide-text-color: #000000;
-  --header-background-color: #969696;
+  --header-background-color: #1381B0;
   --header-background-text-color: #FFFFFF;
   --primary: #1381B0;
   --secondary: #FF961C;
