--- a/docs/xar-WP6/assets/WP6.css
+++ b/docs/xar-WP6/assets/WP6.css
@@ -1,60 +1,31 @@
-
-/*  Xaringan */
-   /* Tittle  */
-   .title-slide {
-      background-image: url("https://raw.githubusercontent.com/fabbiocrux/Figures/main/Inedit/INEDIT-logo-00.jpg");
-      background-position: 50% 15%;
-      background-size: 80%;
-      background-color: #FFFFFF;
-         text-align:left;
-      vertical-align: top;
-      text-shadow: none;
-      /*text-shadow: 0 0 5px #333;*/
-      /*padding-left: 100px;   delete this for 4:3 aspect ratio */
-   }
-
-
-
-.title-slide h1 {
-   color: #1A292C;
-      font-weight: normal;
-   font-size: 45px;
-   /*padding: 20px;*/
-      text-align: left;
-   vertical-align: middle;
-   margin-bottom: 18px;
-}
-
-
-
 /* FONts */
 
-   @font-face {
+@font-face {
       font-family: 'Trebuchet-MS';
       font-style: normal;
       font-weight: 700;
-      src: url('fonts/Trebuchet-MS-Bold.ttf') format('truetype');
+      src: url('https://github.com/LF2L/INEDIT-WP6/blob/main/xar-WP6/assets/fonts/Trebuchet-MS-Bold.ttf?raw=true') format('truetype');
    }
 
 @font-face {
    font-family: 'Trebuchet-MS';
    font-style: normal;
    font-weight: 400;
-   src: url('fonts/Trebuchet-MS.ttf') format('truetype');
+   src: url('https://github.com/LF2L/INEDIT-WP6/blob/main/xar-WP6/assets/fonts/Trebuchet-MS.ttf?raw=true') format('truetype');
 }
 
 @font-face {
    font-family: 'Trebuchet-MS';
    font-style: italic;
    font-weight: 700;
-   src: url('fonts/Trebuchet-MS-Bold-Italic.ttf') format('truetype');
+   src: url('https://github.com/LF2L/INEDIT-WP6/blob/main/xar-WP6/assets/fonts/Trebuchet-MS-Bold-Italic.ttf?raw=true') format('truetype');
 }
 
 @font-face {
    font-family: 'Trebuchet-MS';
    font-style: italic;
    font-weight: 400;
-   src: url('assets/fonts/Trebuchet-MS-Italic.ttf') format('truetype');
+   src: url('https://github.com/LF2L/INEDIT-WP6/blob/main/xar-WP6/assets/fonts/Trebuchet-MS-Italic.ttf?raw=true') format('truetype');
 }
 
 
