--- a/xar-WP6/assets/xaringan-themer.css
+++ b/xar-WP6/assets/xaringan-themer.css
@@ -18,7 +18,7 @@
  *  Version: 0.4.1
  *
  * ------------------------------------------------------- */
-@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap);
+@import url(https://www.fabbiocrux.com/inedit/wp6.css);
 @import url(https://fonts.googleapis.com/css?family=Cabin:600,600i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
 
@@ -27,11 +27,11 @@
   /* Fonts */
   --text-font-family: Trebuchet-MS;
   --text-font-is-google: 0;
-  --text-font-family-fallback: Menlo;
+  --text-font-family-fallback: Belgates;
   --text-font-base: sans-serif;
   --header-font-family: Trebuchet-MS;
   --header-font-is-google: 0;
-  --header-font-family-fallback: Menlo;
+  --header-font-family-fallback: mono;
   --code-font-family: 'Source Code Pro';
   --code-font-is-google: 1;
   --base-font-size: 20px;
@@ -77,7 +77,7 @@ html {
 
 body {
   font-family: var(--text-font-family), var(--text-font-family-fallback), var(--text-font-base);
-  font-weight: 500;
+  font-weight: bold;
   color: var(--text-color);
 }
 h1, h2, h3 {
