--- a/xar-WP6/assets/xaringan-themer.css
+++ b/xar-WP6/assets/xaringan-themer.css
@@ -18,7 +18,7 @@
  *  Version: 0.4.1
  *
  * ------------------------------------------------------- */
-@import url(https://www.fabbiocrux.com/inedit/wp6.css);
+@import url(https://raw.githubusercontent.com/LF2L/INEDIT-WP6/main/xar-WP6/assets/WP6.css);
 @import url(https://fonts.googleapis.com/css?family=Cabin:600,600i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
 
