--- a/docs/xar-WP6/assets/WP6.css
+++ b/docs/xar-WP6/assets/WP6.css
@@ -3,33 +3,40 @@
 @font-face {
       font-family: 'Trebuchet-MS';
       font-style: normal;
-      font-weight: 700;
-      src: url('https://github.com/LF2L/INEDIT-WP6/blob/main/xar-WP6/assets/fonts/Trebuchet-MS-Bold.ttf?raw=true') format('truetype');
+      font-weight: bold;
+      src: url('assets/fonts/Trebuchet-MS-Bold.ttf') format('truetype');
    }
 
 @font-face {
    font-family: 'Trebuchet-MS';
    font-style: normal;
    font-weight: 400;
-   src: url('https://github.com/LF2L/INEDIT-WP6/blob/main/xar-WP6/assets/fonts/Trebuchet-MS.ttf?raw=true') format('truetype');
+   src: url(https://www.fabbiocrux.com/inedit/Trebuchet-MS.ttf) format('truetype');
 }
+
+
 
 @font-face {
    font-family: 'Trebuchet-MS';
    font-style: italic;
    font-weight: 700;
-   src: url('https://github.com/LF2L/INEDIT-WP6/blob/main/xar-WP6/assets/fonts/Trebuchet-MS-Bold-Italic.ttf?raw=true') format('truetype');
+   src: url(https://github.com/LF2L/INEDIT-WP6/blob/main/xar-WP6/assets/fonts/Trebuchet-MS-Bold-Italic.ttf?raw=true) format('truetype');
 }
 
 @font-face {
    font-family: 'Trebuchet-MS';
    font-style: italic;
    font-weight: 400;
-   src: url('https://github.com/LF2L/INEDIT-WP6/blob/main/xar-WP6/assets/fonts/Trebuchet-MS-Italic.ttf?raw=true') format('truetype');
+   src: url(https://github.com/LF2L/INEDIT-WP6/blob/main/xar-WP6/assets/fonts/Trebuchet-MS-Italic.ttf?raw=true) format('truetype');
 }
 
 
 
-
+@font-face {
+      font-family: 'Belgates';
+      font-style: normal;
+      font-weight: 400;
+      src: url('assets/fonts/Belgates.ttf') format('truetype');
+   }
 
 
