--- a/docs/assets/xaringan-themer.css
+++ b/docs/assets/xaringan-themer.css
@@ -18,8 +18,8 @@
  *  Version: 0.4.1
  *
  * ------------------------------------------------------- */
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap);
 @import url(https://raw.githubusercontent.com/LF2L/INEDIT-WP6/main/xar-WP6/assets/WP6.css);
-@import url(https://fonts.googleapis.com/css?family=Cabin:600,600i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
 
 
@@ -27,39 +27,40 @@
   /* Fonts */
   --text-font-family: Trebuchet-MS;
   --text-font-is-google: 0;
-  --text-font-family-fallback: Belgates;
+  --text-font-family-fallback: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial;
   --text-font-base: sans-serif;
   --header-font-family: Trebuchet-MS;
   --header-font-is-google: 0;
-  --header-font-family-fallback: mono;
+  --header-font-family-fallback: Georgia, serif;
   --code-font-family: 'Source Code Pro';
   --code-font-is-google: 1;
   --base-font-size: 20px;
   --text-font-size: 1rem;
   --code-font-size: 0.9rem;
   --code-inline-font-size: 1em;
-  --header-h1-font-size: 1.50rem;
-  --header-h2-font-size: 1.25rem;
-  --header-h3-font-size: 1.15rem;
+  --header-h1-font-size: 3rem;
+  --header-h2-font-size: 2.5rem;
+  --header-h3-font-size: 2rem;
 
   /* Colors */
-  --text-color: #272822;
-  --header-color: #4D4D4E;
+  --text-color: #000000;
+  --header-color: #1381B0;
   --background-color: #FFFFFF;
-  --link-color: #4D4D4E;
-  --text-bold-color: #4D4D4E;
+  --link-color: #1381B0;
+  --text-bold-color: #1381B0;
   --code-highlight-color: rgba(255,255,0,0.5);
-  --inverse-text-color: #FFFFFF;
-  --inverse-background-color: #4D4D4E;
+  --inverse-text-color: #000000;
+  --inverse-background-color: #FF961C;
   --inverse-header-color: #FFFFFF;
-  --inverse-link-color: #4D4D4E;
+  --inverse-link-color: #1381B0;
   --title-slide-background-color: #FFFFFF;
-  --title-slide-text-color: #4D4D4E;
-  --header-background-color: #4D4D4E;
+  --title-slide-text-color: #000000;
+  --header-background-color: #1381B0;
   --header-background-text-color: #FFFFFF;
-  --base: #4D4D4E;
+  --primary: #1381B0;
+  --secondary: #FF961C;
   --white: #FFFFFF;
-  --black: #272822;
+  --black: #000000;
   --red: #f34213;
   --purple: #3e2f5b;
   --orange: #ff8811;
@@ -77,18 +78,18 @@ html {
 
 body {
   font-family: var(--text-font-family), var(--text-font-family-fallback), var(--text-font-base);
-  font-weight: bold;
+  font-weight: normal;
   color: var(--text-color);
 }
 h1, h2, h3 {
   font-family: var(--header-font-family), var(--header-font-family-fallback);
-  font-weight: bold;
+  font-weight: 600;
   color: var(--header-color);
 }
 .remark-slide-content {
   background-color: var(--background-color);
   font-size: 1rem;
-  padding: 25px 50px 50px 30px;
+  padding: 16px 64px 16px 64px;
   width: 100%;
   height: 100%;
 }
@@ -109,10 +110,10 @@ h1, h2, h3 {
 }
 .remark-inline-code {
   font-size: var(--code-inline-font-size);
-  color: #4D4D4E;
+  color: #1381B0;
 }
 .remark-slide-number {
-  color: #4D4D4E;
+  color: #1381B0;
   opacity: 1;
   font-size: 0.9rem;
 }
@@ -163,10 +164,10 @@ a, a > code {
   float: left;
 }
 .left-column h2, .left-column h3 {
-  color: #4D4D4E99;
+  color: #1381B099;
 }
 .left-column h2:last-of-type, .left-column h3:last-child {
-  color: #4D4D4E;
+  color: #1381B0;
 }
 .right-column {
   width: 75%;
@@ -188,7 +189,7 @@ img, video, iframe {
   max-width: 100%;
 }
 blockquote {
-  border-left: solid 5px #4D4D4E80;
+  border-left: solid 5px #FF961C80;
   padding-left: 1em;
 }
 .remark-slide table {
@@ -203,7 +204,7 @@ th, td {
   padding: 5px;
 }
 .remark-slide thead, .remark-slide tfoot, .remark-slide tr:nth-child(even) {
-  background: #DBDBDB;
+  background: #FFEAD1;
 }
 table.dataTable tbody {
   background-color: var(--background-color);
@@ -213,7 +214,7 @@ table.dataTable.display tbody tr.odd {
   background-color: var(--background-color);
 }
 table.dataTable.display tbody tr.even {
-  background-color: #DBDBDB;
+  background-color: #FFEAD1;
 }
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   background-color: rgba(255, 255, 255, 0.5);
@@ -264,7 +265,7 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   width: 100%;
   background: var(--header-background-color);
   color: var(--header-background-text-color);
-  padding: 2rem 50px 1.5rem 30px;
+  padding: 2rem 64px 1.5rem 64px;
   margin-top: 0;
   box-sizing: border-box;
 }
@@ -283,11 +284,17 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
   }
 }
 
-.base {
-  color: var(--base);
+.primary {
+  color: var(--primary);
 }
-.bg-base {
-  background-color: var(--base);
+.bg-primary {
+  background-color: var(--primary);
+}
+.secondary {
+  color: var(--secondary);
+}
+.bg-secondary {
+  background-color: var(--secondary);
 }
 .white {
   color: var(--white);
@@ -361,8 +368,8 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
 /* Extra CSS */
 .remark-slide-content > h1:first-of-type {
   margin-top: 5px;
-  padding-bottom: 25px;
-  border-bottom: 1px solid #4D4D4E;
+  margin-bottom: 10px;
+  border-bottom: 2px solid #EB811B;
 }
 .remark-slide-content h1 {
   margin-bottom: 0;
