--- a/xar-WP6/assets/WP6.css
+++ b/xar-WP6/assets/WP6.css
@@ -33,7 +33,7 @@
 
 
 @font-face {
-      font-family: 'Belgates';
+      font-family: 'test-Belgates';
       font-style: normal;
       font-weight: 400;
       src: url('assets/fonts/Belgates.ttf') format('truetype');
