--- a/docs/xar-WP6/assets/xaringan-themer.css
+++ b/docs/xar-WP6/assets/xaringan-themer.css
@@ -29,7 +29,7 @@
   --text-font-is-google: 0;
   --text-font-family-fallback: Belgates;
   --text-font-base: sans-serif;
-  --header-font-family: Trebuchet-MS;
+  --header-font-family: Trebuchet-MS-titles;
   --header-font-is-google: 0;
   --header-font-family-fallback: mono;
   --code-font-family: 'Source Code Pro';
