--- a/xar-WP6/assets/xaringan-themer.css
+++ b/xar-WP6/assets/xaringan-themer.css
@@ -18,7 +18,7 @@
  *  Version: 0.4.1
  *
  * ------------------------------------------------------- */
-@import url(https://raw.githubusercontent.com/LF2L/INEDIT-WP6/main/xar-WP6/assets/WP6.css);
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Cabin:600,600i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
 
@@ -29,7 +29,7 @@
   --text-font-is-google: 0;
   --text-font-family-fallback: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial;
   --text-font-base: sans-serif;
-  --header-font-family: test-Belgates;
+  --header-font-family: Titles;
   --header-font-is-google: 0;
   --header-font-family-fallback: Georgia, serif;
   --code-font-family: 'Source Code Pro';
@@ -77,12 +77,12 @@ html {
 
 body {
   font-family: var(--text-font-family), var(--text-font-family-fallback), var(--text-font-base);
-  font-weight: 600;
+  font-weight: 400;
   color: var(--text-color);
 }
 h1, h2, h3 {
   font-family: var(--header-font-family), var(--header-font-family-fallback);
-  font-weight: bold;
+  font-weight: 700;
   color: var(--header-color);
 }
 .remark-slide-content {
