dding link specific

--- a/docs/xar-WP6/assets/WP6.css
+++ b/docs/xar-WP6/assets/WP6.css
@@ -1,7 +1,7 @@
 /* FONts */
 
 @font-face {
-      font-family: 'Trebuchet-MS-titles';
+      font-family: 'Titles';
       font-style: normal;
       font-weight: bold;
       src: url(fonts/Trebuchet-MS-Bold.ttf) format('truetype');
