--- a/docs/xar-WP6/assets/xaringan-themer.css
+++ b/docs/xar-WP6/assets/xaringan-themer.css
@@ -18,7 +18,7 @@
  *  Version: 0.4.1
  *
  * ------------------------------------------------------- */
-@import url(https://raw.githubusercontent.com/LF2L/INEDIT-WP6/main/xar-WP6/assets/WP6.css);
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Cabin:600,600i&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700&display=swap);
 
@@ -27,11 +27,11 @@
   /* Fonts */
   --text-font-family: Trebuchet-MS;
   --text-font-is-google: 0;
-  --text-font-family-fallback: test-Belgates;
+  --text-font-family-fallback: -apple-system, BlinkMacSystemFont, avenir next, avenir, helvetica neue, helvetica, Ubuntu, roboto, noto, segoe ui, arial;
   --text-font-base: sans-serif;
-  --header-font-family: Trebuchet-MS-titles;
+  --header-font-family: Titles;
   --header-font-is-google: 0;
-  --header-font-family-fallback: mono;
+  --header-font-family-fallback: Georgia, serif;
   --code-font-family: 'Source Code Pro';
   --code-font-is-google: 1;
   --base-font-size: 20px;
@@ -77,12 +77,12 @@ html {
 
 body {
   font-family: var(--text-font-family), var(--text-font-family-fallback), var(--text-font-base);
-  font-weight: bold;
+  font-weight: 400;
   color: var(--text-color);
 }
 h1, h2, h3 {
   font-family: var(--header-font-family), var(--header-font-family-fallback);
-  font-weight: bold;
+  font-weight: 700;
   color: var(--header-color);
 }
 .remark-slide-content {
@@ -370,8 +370,8 @@ table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
 }
 .remark-slide-content > h2:first-of-type {
   margin-top: 5px;
-  margin-bottom: 10px;
-  border-bottom: 2px solid #EB811B;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #EB811B;
 }
 .remark-slide-content > h3:first-of-type {
   margin-top: 5px;
